08_Networking/08-06-03_NetPol_NS/db01-ns-netpol.yaml
# Exercise 37-03 v3.3.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db01-netpol
  namespace: db-ns
spec:
  podSelector:
    matchLabels:
      tier: database
  policyTypes:
    - Ingress
    - Egress
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            env: prd 
      - podSelector:
          matchLabels:
            tier: backend
      ports:
        - protocol: TCP
          port: 6379
